--- a/k8s-1.15-kubeadm/kubeadm-config.yaml
+++ b/k8s-1.15-kubeadm/kubeadm-config.yaml
@@ -2,3 +2,4 @@ apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
 kubernetesVersion: stable
 controlPlaneEndpoint: "k8s15-api-server.prabhatsharma.com:443"
+podSubnet: 192.168.0.0/16
